--- a/style.css
+++ b/style.css
@@ -30,5 +30,31 @@ nav a{
     color:black;
     font-weight: 550;
 }
+.vote-img{
+    height:800px;
+    width:100%;
+    /* background-image: url("online-voting.webp");
+    background-size: cover; */
 
+}
+footer{
+    background-color: rgb(27, 24, 24);
+    margin-top:0;
+    padding-top: 0;
+}
+.foot-top{
+    display:flex;
+    justify-content: space-evenly;
+    color:azure;
+}
+.foot-box{
+    display: inline-block;
+}
+.foot-box h2{
+    font-size: 25px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+}
+.foot-box h2:hover{
+    text-decoration: underline;
+}
 
