--- a/style.css
+++ b/style.css
@@ -191,3 +191,18 @@ footer {
     /* text-decoration: underline; */
     transform: scale(1.25);
 }
+.bb {
+    display: flex;
+    gap: 100px; /* Space between buttons */
+    margin-left: 540px;
+  }
+
+  .b {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+  }
